fixed CV on mobile

--- a/css/jack.css
+++ b/css/jack.css
@@ -63,6 +63,10 @@ a:hover {
     margin:0 30% 0 30%;
 }
 
+#CVmobile{
+    display: hidden;
+}
+
 @media only screen and (max-width: 500px) {
 
     *{
@@ -73,9 +77,12 @@ a:hover {
         flex-direction: column;
     }
 
-    #CV{
-        width:100%;
-        margin: 0;
+    #CV, #download{
+    display: none;
+    }
+
+    #CVmobile{
+        display: block;
     }
 
 }
